Justeringar utifrån Annas kommentarer - fram till 2.3.

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -83,7 +83,7 @@ Senast uppdaterad: `r Sys.Date()`</i>
 # Inledning {-}
 I år är det 10 år sedan året då Sverige registrerade det högsta antalet asylsökande genom tiderna. 2015 sökte närmare 163 000 personer asyl i Sverige och för Dalarnas del blev 2016 det år då invandringen var som störst efter att de asylsökande fått uppehållstillstånd och folkbokförts i länet. 
 
-I november 2015 uttryckte regeringen att trycket var stort på det svenska samhället och att Sverige behövde "ett andrum för svenskt flyktingmottagande". I och med det skärptes migrationspolitiken. Regeringen var trots det tydlig med att det stora mottagandet skulle "vara en stolthet för oss när historien skrivs" [(Sveriges Radio, 2015)](https://www.sverigesradio.se/artikel/6310364){target="_blank"}^[Sveriges Radio, 2015. Regeringens besked om skärpt flyktingpolitik, 2015-11-25.]. [Riksrevisionen (2017)](https://www.riksdagen.se/sv/dokument-och-lagar/dokument/riksrevisionens-granskningsrapport/lardomar-av-flyktingsituationen-hosten-2015-_h5b54/){target="_blank"}^[Riksrevisionen, 2017. Granskningsrapport 2017:4, Lärdomar av flyktingsituationen hösten 2015 - beredskap och hantering.] granskade de centrala offentliga aktörernas beredskap och noterade att det brast i vissa avseenden, men att huvuduppdraget ändå kunde genomföras. 
+I november 2015 uttryckte regeringen att trycket var stort på det svenska samhället och att Sverige behövde "ett andrum för svenskt flyktingmottagande". I och med det skärptes migrationspolitiken. Regeringen var trots det tydlig med att det stora mottagandet skulle "vara en stolthet för oss när historien skrivs" [(Sveriges Radio, 2015)](https://www.sverigesradio.se/artikel/6310364){target="_blank"}^[Sveriges Radio, 2015. Regeringens besked om skärpt flyktingpolitik, 2015-11-25.]. [Riksrevisionen (2017)](https://www.riksdagen.se/sv/dokument-och-lagar/dokument/riksrevisionens-granskningsrapport/lardomar-av-flyktingsituationen-hosten-2015-_h5b54/){target="_blank"}^[Riksrevisionen, 2017. Granskningsrapport 2017:4, Lärdomar av flyktingsituationen hösten 2015 - beredskap och hantering.] granskade de centrala offentliga aktörernas beredskap och bedömde att beredskapen brast i vissa avseenden, men att kärnuppdraget ändå i huvudsak kunde genomföras. 
 
 År 2019 publicerade Region Dalarna rapporten [*Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv*](https://www.regiondalarna.se/contentassets/d845727dbc9f49c3b7b09a2c60456497/integrationsanalys.pdf){target="_blank"}.^[Region Dalarna, 2019. Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv. Regionala utvecklingsförvaltningens rapportserie #1.] Rapporten skrevs med syfte att följa upp hur den höga asylinvandringen till Sverige och Dalarna påverkat länet. År 2016 registrerades cirka 30 000 asylsökande och fram till pandemin registrerades mellan 20-30 000 årligen. År 2024 hade asylinvandringen minskat till cirka 10 000, en nivå som är den lägsta sedan 1996, och en del i det paradigmskifte som nuvarande regering verkar för, med ambitioner att öka arbetskraftsinvandringen och minska asylinvandringen [(Regeringen, 2025)](https://www.regeringen.se/pressmeddelanden/2025/01/pressbriefing-om-migrationen-till-sverige-under-2024/){target="_blank"}.^[Regeringen. Pressbriefing om migrationen till Sverige under 2024. 2025-01-10.]
 
@@ -153,7 +153,7 @@ För en fördjupad beskrivning av den utrikes födda befolkningens utveckling i 
 Den första större invandring som påverkat Dalarna i modern tid var den arbetskraftsinvandring som skedde efter andra världskriget. Denna epok varade i stort sett under två decennier, d.v.s. under 1950- och 1960-talet.
 
 Den svenska ekonomin expanderade snabbt efter kriget, vilket gjorde att efterfrågan på arbetskraft var större än tillgången i landet. Bristen berodde även på att ålderskullarna födda på 1920- och 30-talet var relativt små. Arbetskraftsinvandrarna kom främst från Norden, men även från övriga Europa. En överenskommelse om en gemensam nordisk arbetsmarknad år 1954 innebar att framför allt många finländare invandrade under 1960- och 70-talet, då det även var lågkonjunktur i Finland. I Dalarnas län bosatte sig dessa främst i kommuner där det fanns stor tillverkningsindustri så som i Gagnef, Borlänge, Avesta
-och Ludvika. En mycket liten andel av invandringen under denna tid kom från andra världsdelar. Efter andra världskriget och fram till 1970-talet låg arbetskraftsinvandringen i hela Sverige på en förhållandevis hög nivå, men i slutet av 1970-talet upphörde i princip all arbetskraftsinvandring för en tid. 
+och Ludvika. En mycket liten andel av invandringen under denna tid kom från andra världsdelar. Efter andra världskriget och fram till 1970-talet låg arbetskraftsinvandringen i hela Sverige på en förhållandevis hög nivå, men i mitten av 1970-talet upphörde i princip all arbetskraftsinvandring för en tid. 
 
 I mitten av 1980-talet växte en ny typ av immigration fram. Tidigare hade de invandrare som sökt sig till Sverige av flyktingskäl främst gjort det under enstaka katastrofer. Detta scenario förändrades efter år 1984. I takt med den växande globaliseringen ökade de politiska kraven på att den rika världen borde ta sitt ansvar och acceptera flyktingar från Asien, Afrika och Mellanöstern. Sverige var ett av de länder som till en början framträdde med en jämförelsevis generös flyktingpolitik. År 1987–90 togs omkring 20 000 flyktingar emot årligen i Sverige. Detta gjorde att antalet invandrade/immigranter i Dalarna ökade under tidsperioden.
 
@@ -203,7 +203,7 @@ gg_kombo
 
 Andelen utrikes födda har ökat i samtliga av Dalarnas kommuner mellan `r andel_utrikes_forsta_ar` och `r andel_utrikes_senaste_ar`, vilket kommer av att invandringen varit större än utvandringen under hela 2000-talet. Hur stor ökningen varit skiljer dock tydligt mellan kommunerna. I `r andel_utrikes_kommun_hogst_sista_ar` har andelen utrikes födda exempelvis ökat med `r andel_utrikes_kommun_hogst_forandring_varde` procentenheter sedan  `r andel_utrikes_forsta_ar`, medan ökningen har varit klart lägre i näraliggande Smedjebacken (ungefär `r andel_utrikes_smedjebacken_forandring_varde` procentenheter under samma tidsperiod) eller Gagnef (ungefär `r andel_utrikes_Gagnef_forandring_varde` procentenheter).
 
-För att förstå befolkningsutvecklingen i Dalarna är det även viktigt att undersöka de komponenter som, vid sidan om invandringen, påverkar befolkningsutvecklingen; födelseöverskottet och den inrikes flyttningen.
+För att förstå befolkningsutvecklingen i Dalarna är det även viktigt att undersöka de delar som, vid sidan om invandringen, påverkar befolkningsutvecklingen; födelseöverskottet och den inrikes flyttningen.
 
 Mellan år `r befforandring_komponent_min_ar` och `r befforandring_komponent_max_ar` har antalet döda i Dalarna varit fler än antalet födda och antalet utflyttade till övriga Sverige har varit fler än antalet inflyttade från övriga Sverige. Totalt flyttade `r inrikes_flyttningsoverskott_netto` personer netto från Dalarna till andra delar av Sverige under perioden, medan det dog `r fodelseunderskott_netto` fler personer än det föddes. Under samma period var invandringsöverskottet `r invandringsoverskott_netto` personer. Att Dalarnas befolkning har växt under 2000-talet beror således på att invandringen har varit relativt stor.
 
@@ -265,15 +265,6 @@ Ett viktigt steg för att kunna integreras i ett samhälle är att lära sig spr
 ## Språk
 Att ha grundläggande kunskaper i det officiella språket är viktigt för att kunna delta i samhället, både socialt, ekonomiskt och kulturellt. För att underlätta integrationen av nyanlända har Sverige ett system för svenskundervisning för invandrare, hädanefter benämnt SFI. SFI är en utbildning som erbjuds till personer som är bosatta i Sverige men saknar sådana grundläggande kunskaper i svenska språket som utbildningen syftar till att ge. Från andra kalenderhalvåret det år hen fyller 16 år har personen rätt till SFI ([Skolverket](https://www.skolverket.se/regler-och-ansvar/ansvar-i-skolfragor/ratt-till-sfi){target="_blank"}).
 
-Hur lång tid det tar att slutföra SFI, från när personen invandrade till Sverige (vistelsetid), påverkas av vilken utbildningsnivå den invandrade har. Kvinnor med förgymnasial utbildning som blev godkända i SFI år `r sfi_max_ar` hade varit i Sverige i `r sfi_kvinnor_forgymnasial` dagar (medianvärde), att jämföra med `r sfi_kvinnor_gymnasial` dagar för kvinnor med gymnasial utbildning. För kvinnor med högst utbildning (eftergymnasial) tog det `r sfi_kvinnor_eftergymnasial` dagar, vilket alltså är något längre tid än för de med gymnasial utbildning.
-
-Män med förgymnasial utbildning som blev godkända i SFI under år `r sfi_max_ar` hade varit i Sverige betydligt kortare tid än kvinnorna med motsvarande utbildning, `r sfi_man_forgymnasial` dagar (medianvärde). Till skillnad från kvinnorna hade dock de män med gymnasial utbildning som blivit godkända under år `r sfi_max_ar` varit i Sverige längre tid än motsvarande personer med förgymnasial utbildning, hela `r sfi_man_gymnasial` dagar, vilket även är klart längre än kvinnorna med gymnasial utbildning som blev godkända. De män med längst utbildning (eftergymnasial) hade varit i Sverige i `r sfi_man_eftergymnasial` dagar när de blev godkända i SFI år `r sfi_max_ar`, vilket är något kortare tid än kvinnorna med motsvarande utbildning.
-
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
-gg_SFI$sfi_vistelsetid_senastear_Dalarna
-```
-<br>
-
 Vistelsetiden för de personer boende i Dalarna som blivit godkända i SFI har förändrats relativt mycket över tid, men oavsett utbildningsnivå har vistelsetiden ökat över tid. Under några år i slutet på 1990-talet hade de män och kvinnor med förgymnasial utbildning som blivit godkända i SFI varit i Sverige ungefär 1300-1400 dagar (medianvärde). Därefter såväl ökade som minskade vistelsetiden fram till mitten av 2010-talet, innan den ökade tydligt fram till åren runt pandemin (2020-2021). År `r sfi_max_ar` hade de män och kvinnor med förgymnasial utbildning som blev godkända i SFI i Dalarna varit i Sverige i `r sfi_sistaar_varde_forgymnasial` dagar, vilket är ungefär lika länge som de som blev godkända åren innan. För personer med längre utbildningar (gymnasial eller eftergymnasial) är trenden liknande, men vistelsetiden generellt kortare. 
 
 En orsak till att vistelsetiden ökade stadigt för de som blev godkända från mitten av 2010-talet, oavsett utbildningsbakgrund, kan vara att många då invandrade till Sverige. Det, i kombination med en pandemi som sannolikt försvårade möjligheterna till undervisning, kan ha gjort att det tog längre tid att slutföra SFI.
@@ -283,7 +274,16 @@ gg_SFI$sfi_vistelsetid_tidsserie_Dalarna
 ```
 <br>
 
-Från 1 januari 2025 har kraven på att delta i SFI skärpts. Deltagande är bland annat begränsat till tre år och en individuell studieplan ska upprättas i samband med antagning. Det innebär att genomströmningstiderna behöver återgå till den nivå som rådde innan pandemin. 
+Hur lång tid det tar att slutföra SFI, från när personen invandrade till Sverige (vistelsetid), påverkas av vilken utbildningsnivå den invandrade har. Kvinnor med förgymnasial utbildning som blev godkända i SFI år `r sfi_max_ar` hade varit i Sverige i `r sfi_kvinnor_forgymnasial` dagar (medianvärde), att jämföra med `r sfi_kvinnor_gymnasial` dagar för kvinnor med gymnasial utbildning. För kvinnor med högst utbildning (eftergymnasial) tog det `r sfi_kvinnor_eftergymnasial` dagar, vilket alltså är något längre tid än för de med gymnasial utbildning.
+
+Män med förgymnasial utbildning som blev godkända i SFI under år `r sfi_max_ar` hade varit i Sverige betydligt kortare tid än kvinnorna med motsvarande utbildning, `r sfi_man_forgymnasial` dagar (medianvärde). Till skillnad från kvinnorna hade dock de män med gymnasial utbildning som blivit godkända under år `r sfi_max_ar` varit i Sverige längre tid än motsvarande personer med förgymnasial utbildning, hela `r sfi_man_gymnasial` dagar, vilket även är klart längre än kvinnorna med gymnasial utbildning som blev godkända. De män med längst utbildning (eftergymnasial) hade varit i Sverige i `r sfi_man_eftergymnasial` dagar när de blev godkända i SFI år `r sfi_max_ar`, vilket är något kortare tid än kvinnorna med motsvarande utbildning.
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+gg_SFI$sfi_vistelsetid_senastear_Dalarna
+```
+<br>
+
+Från 1 januari 2025 har kraven på att delta i SFI skärpts. Deltagande är bland annat begränsat till tre år och en individuell studieplan ska upprättas i samband med antagning. Det innebär att genomströmningstiderna behöver återgå till den nivå som rådde innan pandemin, utan att kvaliteten i utbildningen försämras. 
 
 ## Utbildning
 En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv på många sätt, såsom hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en högre utbildning lever generellt längre ([SCB](https://www.scb.se/hitta-statistik/statistik-efter-amne/befolkning-och-levnadsforhallanden/befolkningens-sammansattning-och-utveckling/demografisk-analys/pong/statistiknyhet/livslangd-efter-utbildningsniva/){target="_blank"}), har en genomsnittligt högre inkomst ([SCB](https://www.scb.se/hitta-statistik/sverige-i-siffror/utbildning-jobb-och-pengar/medelloner-i-sverige/){target="_blank"}) och mår i allmänhet bättre än de med lägre utbildning ([FHM](https://www.folkhalsomyndigheten.se/contentassets/ca6067606d8847f7945e922642853caf/utbildning-halsa-faktablad.pdf){target="_blank"}). Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har hela arbetslivet framför sig. Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
@@ -461,7 +461,7 @@ gg_sysselsattningsgrad_tidsserie$sysselsattningsgrad_tidsserie_Dalarna
 År `r syssgrad_93_senaste_ar` hade sysselsättningsgraden ökat till `r syssgrad_93_kvinnor_inrikes_max_ar_procent` procent för inrikes födda kvinnor och 
 `r syssgrad_93_män_inrikes_max_ar_procent` procent för inrikes födda män. Inrikes födda kvinnor har således fortfarande något högre sysselsättningsgrad än inrikes födda män. Även för utrikes födda har sysselsättningsgraden ökat tydligt för båda könen, men med `r syssgrad_93_män_utrikes_max_ar_procent` procent har de utrikes födda männen idag en klart högre sysselsättningsgrad än `r syssgrad_93_kvinnor_utrikes_max_ar_procent` procent för de utrikes födda kvinnorna.
 
-Sysselsättningsgraden i respektive kommun i Dalarna visar ett liknande mönster som länen på nationell nivå. Gruppen inrikes födda har en högre sysselsättningsgrad i samtliga kommuner i Dalarna jämfört med utrikes födda. Även här är sysselsättningsgraden för inrikes födda kvinnor och män ungefär lika hög. För utrikes födda är det däremot stora skillnader mellan kvinnor och män, också mellan olika kommuner. I linje med den nationella bilden är sysselsättningsgraden högre för gruppen utrikes födda män i jämförelse med utrikes födda kvinnor i de flesta kommuner. Sysselsättningsgraden för utrikes födda män skiljer sig dock åt mellan kommuner där den högsta sysselsättningsgraden finns i `r syssgrad_utrikes_man_max_kommun` (`r syssgrad_utrikes_man_max_varde` procent) och den lägsta i `r syssgrad_utrikes_man_min_kommun` (`r syssgrad_utrikes_man_min_varde` procent).
+En jämförelse av sysselsättningsgraden i respektive kommun i Dalarna ger en liknande bild som syns i den länsvisa jämförelsen ovan. Gruppen inrikes födda har en högre sysselsättningsgrad i samtliga kommuner i Dalarna jämfört med utrikes födda. Även här är sysselsättningsgraden för inrikes födda kvinnor och män ungefär lika hög. För utrikes födda är det däremot stora skillnader mellan kvinnor och män, också mellan olika kommuner. I linje med den nationella bilden är sysselsättningsgraden högre för gruppen utrikes födda män i jämförelse med utrikes födda kvinnor i de flesta kommuner. Sysselsättningsgraden för utrikes födda män skiljer sig dock åt mellan kommuner där den högsta sysselsättningsgraden finns i `r syssgrad_utrikes_man_max_kommun` (`r syssgrad_utrikes_man_max_varde` procent) och den lägsta i `r syssgrad_utrikes_man_min_kommun` (`r syssgrad_utrikes_man_min_varde` procent).
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 gg_diagram_arbetsmarknadsstatus_kommun$sysselsattningsgrad_senastear
